[package]
name = "ledger-cosmos-rs"
version = "0.0.1"
authors = ["ZondaX GmbH <info@zondax.ch>"]
description = "Library to integrate with ledger nano s apps"
homepage = "https://github.com/ZondaX/ledger-cosmos-rs"
repository = "https://github.com/ZondaX/ledger-cosmos-rs"
readme = "README.md"

license = "Apache-2.0"
keywords = ["ledger", "nano", "blue", "apdu"]

[lib]
name = "ledger_cosmos_rs"

[dependencies]
ledger = "0.0.4"
quick-error = "1.2.2"
byteorder = "1.2.4"
matches = "0.1.8"
