[package]
name = "ledger-tendermint"
description = "Library to integrate with the Ledger Tendermint app"
version = "0.4.0"
license = "Apache-2.0"
authors = ["ZondaX GmbH <info@zondax.ch>"]
homepage = "https://github.com/ZondaX/ledger-tendermint-rs"
repository = "https://github.com/ZondaX/ledger-tendermint-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "tendermint", "cosmos"]
edition     = "2018"
autobenches = false

[badges]
circle-ci = { repository = "zondax/ledger-tendermint-rs" }

[lib]
name = "ledger_tendermint"

[dependencies]
ledger = "0.2.5"
quick-error = "1.2.2"
byteorder = "1.3.1"
matches = "0.1.8"
lazy_static = "1.2.0"
signatory = { version = "0.11", features = ["digest", "ecdsa", "ed25519"] }

[dev-dependencies]
ed25519-dalek = "1.0.0-pre.1"
sha2 = "0.8.0"
criterion = "0.2"

[[bench]]
name = "app"
harness = false
